--- a/design_systemV2/index.html
+++ b/design_systemV2/index.html
@@ -328,6 +328,13 @@
   </div>
   <div class="blankHS"></div>
 
+
+
+
+
+
+
+
   <!-- LRcarousel-->
   <main>
     <div class="blankHS"></div>
@@ -377,12 +384,8 @@
           </h1>
         </div>
       </div>
-
       <section id="content11">
         <div class="wrapper">
-
-
-          <div class="blankHXS"></div>
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
@@ -390,6 +393,7 @@
               </div>
             </div>
           </div>
+          <div class="blankHXS"></div>
           <!-- Arrow -->
           <div class="Grid Grid--full">
             <div class="Grid-cell">
@@ -401,6 +405,7 @@
           </div>
           <!-- Arrow -->
 
+          <div class="blankHXS"></div>
 
           <div class="Grid Grid--gutters Grid--cols-4 u-textCenter">
             <div class="Grid-cell">
@@ -698,7 +703,6 @@
         <div class="wrapper">
 
 
-          <div class="blankHXS"></div>
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
@@ -706,6 +710,8 @@
               </div>
             </div>
           </div>
+          <div class="blankHXS"></div>
+
           <!-- Arrow -->
           <div class="Grid Grid--full">
             <div class="Grid-cell">
@@ -807,10 +813,7 @@
         </div>
       </section>
       <section id="content13">
-
         <div class="wrapper">
-
-
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
@@ -818,6 +821,8 @@
               </div>
             </div>
           </div>
+          <div class="blankHXS"></div>
+
           <!-- Arrow -->
           <div class="element">
             <h2 class="tArrow">Shadow &#38; depth <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
@@ -880,7 +885,6 @@
       <div class="blankHXS"></div>
       <section id="content21">
         <div class="wrapper">
-
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
@@ -888,6 +892,8 @@
               </div>
             </div>
           </div>
+          <div class="blankHXS"></div>
+
           <!-- Arrow -->
           <div class="Grid Grid--full">
             <div class="Grid-cell">
@@ -1014,21 +1020,21 @@
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
-                <h2 class="tArrow">Responsive Grid <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+                <h1> <strong class="SkylineBlueLt">Responsive Grid</strong> </h1>
+              </div>
+            </div>
+          </div>
+
+          <div class="blankHXS"></div>
+          <div class="Grid Grid--full">
+            <div class="Grid-cell">
+              <div class="element">
+                <h2 class="tArrow">Basic Grid <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
                 </h2>
               </div>
             </div>
           </div>
-          <!-- Arrow -->
-          <div class="blankHXS"></div>
 
-          <div class="Grid Grid--full">
-            <div class="Grid-cell">
-              <div class="element">
-                <h1> <strong class="SkylineBlueLt">Basic Grid</strong> </h1>
-              </div>
-            </div>
-          </div>
           <div class="Grid Grid--full u-textCenter">
             <div class="Grid-cell paddingNone">
               <div class="Demo">
@@ -1231,14 +1237,16 @@
             </pre>
           </div>
           <div class="blankHS"></div>
-
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
-                <h1> <strong class="SkylineBlueLt">Left &#47; Center &#47; Right content alignment</strong> </h1>
+                <h2 class="tArrow">Left &#47; Center &#47; Right content alignment<img class="seArrow"
+                    src="../icon/arrow-se.svg" alt="icon arrow">
+                </h2>
               </div>
             </div>
           </div>
+
           <div class="Grid Grid--gutters Grid--1of2">
             <div class="Grid-cell">
               <div class="Demo">
@@ -1284,10 +1292,12 @@
           </div>
           <div class="blankHS"></div>
 
+
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
-                <h1> <strong class="SkylineBlueLt">Vertical alignment</strong> </h1>
+                <h2 class="tArrow">Vertical alignment<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+                </h2>
               </div>
             </div>
           </div>
@@ -1407,14 +1417,15 @@
             </pre>
           </div>
           <div class="blankHS"></div>
-
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
-                <h1> <strong class="SkylineBlueLt">Nesting</strong> </h1>
+                <h2 class="tArrow">Nesting <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+                </h2>
               </div>
             </div>
           </div>
+
           <div class="Grid Grid--gutters Grid--1of3 Grid--nested">
             <div class="Grid-cell">
               <div class="Demo">
@@ -1469,13 +1480,17 @@
             </pre>
           </div>
           <div class="blankHS"></div>
+
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
-                <h1> <strong class="SkylineBlueLt">Sidebar and main content</strong> </h1>
+                <h2 class="tArrow">Sidebar and main content <img class="seArrow" src="../icon/arrow-se.svg"
+                    alt="icon arrow">
+                </h2>
               </div>
             </div>
           </div>
+          <div class="blankHXS"></div>
 
           <div class="Grid Grid--gutters Grid--1of6">
             <div class="Grid-cell">
@@ -1554,22 +1569,28 @@
 
       <div class="blankHXS"></div>
       <section id="content31">
-        <!-- Arrow -->
-        <div class="wrapper">
-          <div class="element">
-            <h2 class="tArrow">Atoms <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
-            </h2>
-          </div>
-        </div>
-        <!-- Arrow -->
         <div class="wrapper">
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
-                <h1> <strong class="SkylineBlueLt">Buttons</strong> </h1>
+                <h1> <strong class="SkylineBlueLt">Atoms</strong> </h1>
               </div>
             </div>
           </div>
+        </div>
+        <div class="blankHXS"></div>
+        <!-- Arrow -->
+        <div class="wrapper">
+          <div class="element">
+            <h2 class="tArrow">Buttons <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+            </h2>
+          </div>
+        </div>
+        <!-- Arrow -->
+        <div class="blankHXS"></div>
+
+        <div class="wrapper">
+
           <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
             <div class="Grid-cell">
               <div class="element">
@@ -1616,13 +1637,18 @@
                 
             </pre>
           </div>
-          <div class="Grid Grid--full">
-            <div class="Grid-cell">
-              <div class="element">
-                <h1> <strong class="SkylineBlueLt">Icons</strong> </h1>
-              </div>
+          <div class="blankHM"></div>
+
+          <!-- Arrow -->
+          <div class="wrapper">
+            <div class="element">
+              <h2 class="tArrow">Icons <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+              </h2>
             </div>
           </div>
+          <!-- Arrow -->
+          <div class="blankHXS"></div>
+
           <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
             <div class="Grid-cell">
               <div class="element">
@@ -1663,14 +1689,18 @@
               </code>
             </pre>
           </div>
-          <div class="Grid Grid--full">
-            <div class="Grid-cell">
-              <div class="element">
-                <h1> <strong class="SkylineBlueLt">Inputs</strong> </h1>
-              </div>
+          <div class="blankHM"></div>
+
+          <!-- Arrow -->
+          <div class="wrapper">
+            <div class="element">
+              <h2 class="tArrow">Inputs <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+              </h2>
             </div>
           </div>
+          <!-- Arrow -->
           <div class="blankHXS"></div>
+
 
 
           <div class="img__wrap widthS heightS element">
@@ -1694,22 +1724,25 @@
         </div>
       </section>
       <section id="content32">
-        <!-- Arrow -->
-        <div class="wrapper">
-          <div class="element">
-            <h2 class="tArrow">Molecules <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
-            </h2>
-          </div>
-        </div>
-        <!-- Arrow -->
+
         <div class="wrapper">
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
-                <h1> <strong class="SkylineBlueLt">Note</strong> </h1>
+                <h1> <strong class="SkylineBlueLt">Molecules</strong> </h1>
               </div>
             </div>
           </div>
+          <div class="blankHXS"></div>
+
+          <!-- Arrow -->
+          <div class="wrapper">
+            <div class="element">
+              <h2 class="tArrow"> Note <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+              </h2>
+            </div>
+          </div>
+          <!-- Arrow -->
           <div class="blankHXS"></div>
           <div class="Grid Grid--full wrapper">
             <div class="Grid-cell">
@@ -1751,14 +1784,15 @@
 
             </div>
           </div>
-
-          <div class="Grid Grid--full">
-            <div class="Grid-cell">
-              <div class="element">
-                <h1> <strong class="SkylineBlueLt">Cards</strong> </h1>
-              </div>
+          <!-- Arrow -->
+          <div class="wrapper">
+            <div class="element">
+              <h2 class="tArrow"> Cards <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+              </h2>
             </div>
           </div>
+          <!-- Arrow -->
+
           <div class="blankHXS"></div>
           <div class="element">
             <h3 class="accordion accordionBorderTop noMargin"><strong>Clean</strong> </h3>
@@ -1899,23 +1933,27 @@
 
       </section>
       <section id="content33">
-        <!-- Arrow -->
-        <div class="wrapper">
-          <div class="element">
-            <h2 class="tArrow">Organisms <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
-            </h2>
-          </div>
-        </div>
-        <!-- Arrow -->
         <div class="wrapper">
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
-                <h1> <strong class="SkylineBlueLt">Accordion</strong> </h1>
+                <h1> <strong class="SkylineBlueLt">Organisms </strong> </h1>
               </div>
             </div>
           </div>
         </div>
+        <div class="blankHXS"></div>
+
+        <!-- Arrow -->
+        <div class="wrapper">
+          <div class="element">
+            <h2 class="tArrow">Accordion <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+            </h2>
+          </div>
+        </div>
+        <!-- Arrow -->
+        <div class="blankHXS"></div>
+
         <div class="wrapper">
 
           <div class="element">
@@ -1989,16 +2027,15 @@
 
         </div>
         <div class="blankHM"></div>
-
+        <!-- Arrow -->
         <div class="wrapper">
-          <div class="Grid Grid--full">
-            <div class="Grid-cell">
-              <div class="element">
-                <h1> <strong class="SkylineBlueLt">Slideshows</strong> </h1>
-              </div>
-            </div>
+          <div class="element">
+            <h2 class="tArrow">Slideshows <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+            </h2>
           </div>
         </div>
+        <!-- Arrow -->
+
         <div class="blankHS"></div>
 
         <div class="BgSkylineBlueLter">
