--- a/navigation/index.html
+++ b/navigation/index.html
@@ -394,16 +394,19 @@
         <h4 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h4>
         <div class="footer-right">
           <a href="mailto:vickyw.design@gmail.com">
-            <img class="footer-logo" src="../../icon/mail.svg" alt="email">
+            <img class="footer-logo" src="../icon/mail.svg" alt="email" title="Email">
           </a>
-          <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/">
-            <img class="footer-logo" src="../../icon/in.svg" alt="linkedin">
+          <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
+            <img class="footer-logo" src="../icon/in.svg" alt="LinkedIn">
           </a>
           <a target="_blank" href="https://github.com/vicky-wyq">
-            <img class="footer-logo" src="../../icon/git.svg" alt="github">
+            <img class="footer-logo" src="../icon/git.svg" alt="GitHub" title="GitHub">
+          </a>
+          <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
+            <img class="footer-logo" src="../icon/Codepen.svg" alt="CodePen">
           </a>
           <a target="_blank" href="https://www.instagram.com/vw_yiqi/">
-            <img class="footer-logo" src="../../icon/ins.svg" alt="medium">
+            <img class="footer-logo" src="../icon/ins.svg" alt="Instagram" title="Instagram">
           </a>
         </div>
       </div>
