--- a/design_systemV2/index.html
+++ b/design_systemV2/index.html
@@ -377,7 +377,7 @@
     <section id="content1">
       <div class="Grid Grid--full u-textCenter wrapper">
         <div class="Grid-cell">
-          <h1 class="Grid Grid--center"> <span>Styles</span><img class="widthLogo" src="../icon/icon_research.svg"
+          <h1 class="Grid Grid--center"> <span>Styles</span><img class="widthLogo" src="../icon/library.svg"
               alt="Research">
           </h1>
         </div>
@@ -731,83 +731,104 @@
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
-                <h2 class="tArrow">Font size &#38; Weight <img class="seArrow" src="../icon/arrow-se.svg"
-                    alt="icon arrow">
+                <h2 class="tArrow">Display <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
                 </h2>
               </div>
             </div>
           </div>
           <!-- Arrow -->
-
-          <div class="element">
-            <h3 class="accordion accordionBorderTop noMargin withBg"><strong>Display</strong> </h3>
-            <div class="accordion-content">
-              <div class="Grid Grid--full">
-                <div class="Grid-cell">
-                  <p class="specialTextL">Display 1, Lorem ipsum dolor sit amet</p>
-                  <p class="specialTextS">Display 2, Lorem ipsum dolor sit amet</p>
-                </div>
+          <div class="Grid Grid--full">
+            <div class="Grid-cell">
+              <div class="element">
+                <p class="specialTextL">Display 1, Lorem ipsum dolor sit amet</p>
+                <p class="specialTextS">Display 2, Lorem ipsum dolor sit amet</p>
               </div>
-              <div class="blankHXS"></div>
-            </div>
-            <h3 class="accordion noMargin withBg"><strong>Heading</strong> </h3>
-            <div class="accordion-content">
-              <div class="Grid Grid--full">
-                <div class="Grid-cell">
-
-                  <h1 class="fontWeight500">h1 font-weight: 500, margin: top &#38; button 0.75em, Lorem ipsum dolor sit
-                    amet
-                  </h1>
-                  <h2 class="fontWeight500">h2 font-weight: 500, margin: top &#38; button 0.75em, Lorem ipsum dolor sit
-                    amet
-                  </h2>
-                  <h3 class="fontWeight300">h3 font-weight: 300, margin: top &#38; button 0.75em, Lorem ipsum dolor sit
-                    amet
-                  </h3>
-                  <h4 class="fontWeight300">h4 font-weight: 300, margin: top &#38; button 0.75em, Lorem ipsum dolor sit
-                    amet
-                  </h4>
-                  <h5 class="fontWeight300">h5 font-weight: 300, margin: top &#38; button 0.75em, Lorem ipsum dolor sit
-                    amet
-                  </h5>
-                  <h6 class="fontWeight300">h6 font-weight: 300, margin: top &#38; button 0.75em, Lorem ipsum dolor sit
-                    amet
-                  </h6>
-                </div>
-              </div>
-              <div class="blankHXS"></div>
-            </div>
-            <h3 class="accordion noMargin withBg"><strong>Body</strong> </h3>
-            <div class="accordion-content">
-              <div class="blankHXS"></div>
-              <div class="Grid Grid--full">
-                <div class="Grid-cell">
-                  <p class="thick">Paragraph, thick, Lorem ipsum dolor sit amet</p>
-                  <p class="default">Paragraph, normal, Lorem ipsum dolor sit amet</p>
-                  <p class="light">Paragraph, light, Lorem ipsum dolor sit amet</p>
-                </div>
-              </div>
-              <div class="blankHXS"></div>
-            </div>
-            <h3 class="accordion accordionBorderBottom noMargin withBg"><strong>Others </strong>
-            </h3>
-            <div class="accordion-content">
-              <div class="Grid Grid--full">
-                <div class="Grid-cell">
-                  <strong>
-                    <h3>Bold, font weight 500, Lorem ipsum dolor sit amet</h3>
-                  </strong>
-                  <h3 class="allCaps fontWeight300">Uppercase, Lorem ipsum dolor sit amet</h3>
-                  <p class="tArrow">Label, Lorem ipsum dolor sit amet</p>
-                  <p class="specialTextNote">Note, Lorem ipsum dolor sit amet</p>
-                  <div class="t-hello">Note, Lorem ipsum dolor sit amet</div>
-                  <h3 class="textUnderline fontWeight300">text decoration</h3>
-                  <h3 class="textDecor fontWeight300">text decoration</h3>
-                </div>
-              </div>
-              <div class="blankHXS"></div>
             </div>
           </div>
+          <div class="blankHXS"></div>
+          <!-- Arrow -->
+          <div class="Grid Grid--full">
+            <div class="Grid-cell">
+              <div class="element">
+                <h2 class="tArrow">Heading <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+                </h2>
+              </div>
+            </div>
+          </div>
+          <!-- Arrow -->
+          <div class="Grid Grid--full">
+            <div class="Grid-cell">
+              <div class="element">
+                <h1 class="fontWeight500">h1 font-weight: 500, margin: top &#38; button 0.75em, Lorem ipsum dolor sit
+                  amet
+                </h1>
+                <h2 class="fontWeight500">h2 font-weight: 500, margin: top &#38; button 0.75em, Lorem ipsum dolor sit
+                  amet
+                </h2>
+                <h3 class="fontWeight300">h3 font-weight: 300, margin: top &#38; button 0.75em, Lorem ipsum dolor sit
+                  amet
+                </h3>
+                <h4 class="fontWeight300">h4 font-weight: 300, margin: top &#38; button 0.75em, Lorem ipsum dolor sit
+                  amet
+                </h4>
+                <h5 class="fontWeight300">h5 font-weight: 300, margin: top &#38; button 0.75em, Lorem ipsum dolor sit
+                  amet
+                </h5>
+                <h6 class="fontWeight300">h6 font-weight: 300, margin: top &#38; button 0.75em, Lorem ipsum dolor sit
+                  amet
+                </h6>
+              </div>
+            </div>
+          </div>
+          <!-- Arrow -->
+          <div class="Grid Grid--full">
+            <div class="Grid-cell">
+              <div class="element">
+                <h2 class="tArrow">Body <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+                </h2>
+              </div>
+            </div>
+          </div>
+          <!-- Arrow -->
+          <div class="blankHXS"></div>
+          <div class="Grid Grid--full">
+            <div class="Grid-cell">
+              <div class="element">
+
+                <p class="thick">Paragraph, thick, Lorem ipsum dolor sit amet</p>
+                <p class="default">Paragraph, normal, Lorem ipsum dolor sit amet</p>
+                <p class="light">Paragraph, light, Lorem ipsum dolor sit amet</p>
+              </div>
+            </div>
+          </div>
+          <div class="blankHXS"></div>
+          <!-- Arrow -->
+          <div class="Grid Grid--full">
+            <div class="Grid-cell">
+              <div class="element">
+                <h2 class="tArrow">Others <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+                </h2>
+              </div>
+            </div>
+          </div>
+          <!-- Arrow -->
+          <div class="Grid Grid--full">
+            <div class="Grid-cell">
+              <div class="element">
+
+                <strong>
+                  <h3>Bold, font weight 500, Lorem ipsum dolor sit amet</h3>
+                </strong>
+                <h3 class="allCaps fontWeight300">Uppercase, Lorem ipsum dolor sit amet</h3>
+                <p class="tArrow">Label, Lorem ipsum dolor sit amet</p>
+                <p class="specialTextNote">Note, Lorem ipsum dolor sit amet</p>
+                <div class="t-hello">Note, Lorem ipsum dolor sit amet</div>
+                <h3 class="textUnderline fontWeight300">text decoration</h3>
+                <h3 class="textDecor fontWeight300">text decoration</h3>
+              </div>
+            </div>
+          </div>
+
         </div>
       </section>
       <section id="content13">
@@ -828,15 +849,42 @@
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
-                <h2 class="tArrow">Font size &#38; Weight <img class="seArrow" src="../icon/arrow-se.svg"
-                    alt="icon arrow">
+                <h2 class="tArrow">Logo with text <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
                 </h2>
               </div>
             </div>
           </div>
           <!-- Arrow -->
+          <div class="Grid Grid--gutters Grid--cols-2">
+            <div class="Grid-cell">
+              <div class="element">
+                <img class="widthS" src="Wordmark_LogoTxt.svg" alt="Wordmark">
+              </div>
+            </div>
+          </div>
+          <!-- Arrow -->
+          <div class="Grid Grid--full">
+            <div class="Grid-cell">
+              <div class="element">
+                <h2 class="tArrow">Web logo <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
+                </h2>
+              </div>
+            </div>
+          </div>
+          <!-- Arrow -->
+          <div class="Grid Grid--gutters Grid--cols-2">
 
-
+            <div class="Grid-cell">
+              <div class="element">
+                <img class="widthS" src="Wordmark_TxtFav.svg" alt="Wordmark">
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <img class="widthS" src="Wordmark_Txt.svg" alt="Wordmark">
+              </div>
+            </div>
+          </div>
         </div>
       </section>
       <section id="content14">
@@ -904,7 +952,7 @@
     <section id="content2">
       <div class="Grid Grid--full u-textCenter wrapper">
         <div class="Grid-cell">
-          <h1 class="Grid Grid--center"> <span>Spacing &#38; Grid</span><img class="widthLogo" src="../icon/note.svg"
+          <h1 class="Grid Grid--center"> <span>Spacing &#38; Grid</span><img class="widthLogo" src="../icon/layout.svg"
               alt="Design">
           </h1>
         </div>
@@ -1588,8 +1636,8 @@
     <section id="content3">
       <div class="Grid Grid--full u-textCenter wrapper">
         <div class="Grid-cell">
-          <h1 class="Grid Grid--center"> <span>UI Components</span><img class="widthLogo"
-              src="../icon/icon_Iteration.svg" alt="Iterate">
+          <h1 class="Grid Grid--center"> <span>UI Components</span><img class="widthLogo" src="../icon/components.svg"
+              alt="Iterate">
           </h1>
         </div>
       </div>
